# Proyecto2_OS

./: CMakeLists.txt  README.md
data/: acciones.txt  procesos.txt
gui/: estadisticas.cpp  estadisticas.h  gui.cpp  gui.h  mainmenu.cpp  mainmenu.h
include/: algoritmo.h  ganttwindow.h  priorityQueue.h  proceso.h  synchronizer.h  tipos.h
src/: algoritmo.cpp  ganttwindow.cpp  main.cpp  main_sync.cpp  priorityQueue.cpp  proceso.cpp  proceso.h  synchronizer.cpp
test/: tests.cpp
